@@ -1,5 +1,13 @@
 2005-10-20  Sven Neumann  <sven@gimp.org>
 
+	* app/batch.c (batch_run): always call the batch interpreter in
+	NON-INTERACTIVE mode (see bug #167964).
+
+	* plug-ins/script-fu/script-fu-text-console.c: removed the run-mode
+	check.
+
+2005-10-20  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/helpbrowser/dialog.c (title_changed): replace newlines
 	with spaces to avoid multiple lines in the combo box.
 
